--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,4 @@
 html {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-}
-
-.App {
-  text-align: center;
-}
-
-.link {
-  margin-right: 10px;
-}
-
-.router{
-  text-align: right;
+  background-color: seagreen;
 }
